--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="hero"></div>
+        <div class="hero">
+            <nav>
+                <p class="logo">Logo</p>
+            </nav>
+        </div>
     </div>
 </body>
 </html>
