--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <div class="hero">
             <nav>
                 <p class="logo">Logo</p>
+                <div class="nav-link">
+                    <ul></ul>
+                </div>
             </nav>
         </div>
     </div>
