--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
             <nav>
                 <p class="logo">Logo</p>
                 <div class="nav-link">
-                    <ul></ul>
+                    <ul>
+                        <li><a href=""></a></li>
+                    </ul>
                 </div>
             </nav>
         </div>
