--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <p class="logo">Logo</p>
                 <div class="nav-link">
                     <ul>
-                        <li><a href=""></a></li>
+                        <li><a href="#"></a></li>
                     </ul>
                 </div>
             </nav>
