--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="nav-link">
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#"></a></li>
+                        <li><a href="#">About</a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                     </ul>
