--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Service</a></li>
-                        <li><a href="#"></a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
             </nav>
