--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                     </ul>
                 </div>
             </nav>
+
+            <div class="hero-body">
+                <p class="head">Welcome to our website</p>
+            </div>
         </div>
     </div>
 </body>
