--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
             <div class="hero-body">
                 <p class="head">Welcome to our website</p>
+                <p class="sub">Lorem ipsum dolor sit amet, concectateur adipliscing elit.</p>
             </div>
         </div>
     </div>
