--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 <p class="sub">Lorem ipsum dolor sit amet, concectateur adipliscing elit.</p>
             </div>
         </div>
+
+        <div class="service">
+            <div class="h-txt">Our services</div>
+        </div>
     </div>
 </body>
 </html>
