--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
         <div class="service">
             <div class="h-txt">Our services</div>
+            <div class="box">
+                <img src="./assets/Untitled (1).png" alt="">
+            </div>
         </div>
     </div>
 </body>
