--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
             <div class="h-txt">Our services</div>
             <div class="box">
                 <img src="./assets/Untitled (1).png" alt="">
+                
+                <div class="txt">
+                    <p class="head">Service 1</p>
+                    <p class="sub">Lorem ipsum dolor sit amet, consecteteur adipliscing elit.</p>
+                </div>
             </div>
         </div>
     </div>
