--- a/index.html
+++ b/index.html
@@ -38,6 +38,22 @@
                         <p class="sub">Lorem ipsum dolor sit amet, consecteteur adipliscing elit.</p>
                         <a href="http://" type="button">Learn More</a>
                     </div>
+                    <div class="box">
+                        <img src="./assets/Untitled (1).png" alt="">
+                        
+                        <div class="txt">
+                            <p class="head">Service 1</p>
+                            <p class="sub">Lorem ipsum dolor sit amet, consecteteur adipliscing elit.</p>
+                            <a href="http://" type="button">Learn More</a>
+                        </div>
+                        <div class="box">
+                            <img src="./assets/Untitled (1).png" alt="">
+                            
+                            <div class="txt">
+                                <p class="head">Service 1</p>
+                                <p class="sub">Lorem ipsum dolor sit amet, consecteteur adipliscing elit.</p>
+                                <a href="http://" type="button">Learn More</a>
+                            </div>
                 </div>
             </div>
         </div>
