--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                                 <p class="sub">Lorem ipsum dolor sit amet, consecteteur adipliscing elit.</p>
                                 <a href="http://" type="button">Learn More</a>
                             </div>
+                        </div>
                 </div>
             </div>
         </div>
