--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                         <p class="sub">Lorem ipsum dolor sit amet, consecteteur adipliscing elit.</p>
                         <a href="http://" type="button">Learn More</a>
                     </div>
+                </div>
                     <div class="box">
                         <img src="./assets/Untitled (1).png" alt="">
                         
