--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                         <div class="box">
-                            <img src="./assets/Untitled (2).png" alt="">
+                            <img src="./assets/Untitled.png" alt="">
                             
                             <div class="txt">
                                 <p class="head">Service 3</p>
