--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="h-txt">Our services</div>
             <div class="boxes">
                 <div class="box">
-                    <img src="./assets/Untitled (1).png" alt="">
+                    <img src="" alt="">
                     
                     <div class="txt">
                         <p class="head">Service 1</p>
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                     <div class="box">
-                        <img src="./assets/Untitled (3).png" alt="">
+                        <img src="" alt="">
                         
                         <div class="txt">
                             <p class="head">Service 2</p>
