--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="h-txt">Our services</div>
             <div class="boxes">
                 <div class="box">
-                    <img src="" alt="">
+                    <img src="./assets/Untitled.png" alt="">
                     
                     <div class="txt">
                         <p class="head">Service 1</p>
