--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <form action="">
-            
+            <img src="./assets/Untitled (2).png" alt="">
         </form>
     </div>
 </body>
