--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             </div>
         </div>
 
-        <form action="">
-            <img src="./assets/Untitled (2).png" alt="">
-        </form>
+        <div class="form">
+            
+        </div>
     </div>
 </body>
 </html>
