--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="form">
-            
+            <img src="./assets/Untitled (2).png" alt="">
         </div>
     </div>
 </body>
