--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 
         <div class="form">
             <img src="./assets/Untitled (2).png" alt="">
+            <form action="">
+                <p class="head">Get in touch</p>
+            </form>
         </div>
     </div>
 </body>
