--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             <img src="./assets/Untitled (2).png" alt="">
             <form action="">
                 <p class="head">Get in touch</p>
+                <div class="name">
+                    
+                </div>
             </form>
         </div>
     </div>
