--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <form action="">
                 <p class="head">Get in touch</p>
                 <div class="name">
-                    
+                    <label for="name" aria-placeholder="Enter your name"></label>
                 </div>
             </form>
         </div>
