--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             <form action="">
                 <p class="head">Get in touch</p>
                 <div class="name">
-                    <label for="name" aria-placeholder="Enter your name"></label>
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" placeholder="Enter your name">
                 </div>
             </form>
         </div>
