--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <form action="">
                 <p class="head">Get in touch</p>
                 <div class="name">
-                    <label for="name">Name</label>
+                    <label for="name">Name</label><br>
                     <input type="text" name="name" id="name" placeholder="Enter your name">
                 </div>
             </form>
