--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                         <label for="name">Name</label><br>
                         <input type="text" name="name" id="name" placeholder="Enter your name">
                     </div>
+                    <div class="email">
+                        <label for="e-mail">E-mail</label>
+                    </div>
                 </form>
             </div>
         </div>
