--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     </div>
                     <div class="email">
                         <label for="e-mail">E-mail</label>
+                        <input type="email" name="email" id="email">
                     </div>
                 </form>
             </div>
