--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <input type="text" name="name" id="name" placeholder="Enter your name">
                     </div>
                     <div class="email">
-                        <label for="e-mail">E-mail</label>
+                        <label for="e-mail">E-mail</label><br>
                         <input type="email" name="email" id="email">
                     </div>
                 </form>
