--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="email">
                         <label for="e-mail">E-mail</label><br>
-                        <input type="email" name="email" id="email">
+                        <input type="email" name="email" id="email" placeholder="Enter your email">
                     </div>
                 </form>
             </div>
