--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                         <label for="e-mail">E-mail</label><br>
                         <input type="email" name="email" id="email" placeholder="Enter your email">
                     </div>
+                    <div class="message">
+                        <label for="message">Message</label>
+                    </div>
                 </form>
             </div>
         </div>
