--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     </div>
                     <div class="message">
                         <label for="message">Message</label>
+                        <textarea name="Message" id="" cols="30" rows="10" placeholder="Enter your message"></textarea>
                     </div>
                 </form>
             </div>
