--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <input type="email" name="email" id="email" placeholder="Enter your email">
                     </div>
                     <div class="message">
-                        <label for="message">Message</label>
+                        <label for="message">Message</label><br>
                         <textarea name="Message" id="" cols="30" rows="10" placeholder="Enter your message"></textarea>
                     </div>
                 </form>
