--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                         <label for="message">Message</label><br>
                         <textarea name="Message" id="" cols="30" rows="10" placeholder="Enter your message"></textarea>
                     </div>
+                    <button>Submit</button>
                 </form>
             </div>
         </div>
