--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 
 <footer>
     <div class="about">
-        
+        <p class="head">About us</p>
+        <p class="sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
     </div>
 </footer>
 </html>
