--- a/index.html
+++ b/index.html
@@ -89,5 +89,9 @@
         <p class="head">About us</p>
         <p class="sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
     </div>
+    <div class="contact">
+        <p class="head">Contact info</p>
+        <p class="sub">123 street, Lagos. <br> name@example.com <br> +1 234 5678</p>
+    </div>
 </footer>
 </html>
