--- a/index.html
+++ b/index.html
@@ -93,5 +93,10 @@
         <p class="head">Contact info</p>
         <p class="sub">123 street, Lagos. <br> name@example.com <br> +1 234 5678</p>
     </div>
+    <div class="social">
+        <ul>
+            <li></li>
+        </ul>
+    </div>
 </footer>
 </html>
