--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
     <div class="social">
         <ul>
-            <li></li>
+            <li><a href="#"></a></li>
         </ul>
     </div>
 </footer>
