--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
     <div class="social">
         <ul>
-            <li><a href="#"></a></li>
+            <li><a href="#"><img src="./" alt=""></a></li>
         </ul>
     </div>
 </footer>
