--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="social">
         <ul>
             <li><a href="#"><img src="./assets/facebook.png" alt=""></a></li>
-            <li></li>
+            <li><a href="#"></a></li>
         </ul>
     </div>
 </footer>
