--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <ul>
             <li><a href="#"><img src="./assets/facebook.png" alt=""></a></li>
             <li><a href="#"><img src="./assets/pinterest-circular-logo-symbol.png" alt=""></a></li>
-            <li><a href="#"></a></li>
+            <li><a href="#"><img src="" alt=""></a></li>
         </ul>
     </div>
 </footer>
