--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <p class="sub">123 street, Lagos. <br> name@example.com <br> +1 234 5678</p>
     </div>
     <div class="social">
+        <p class="head">Follow us</p>
         <ul>
             <li><a href="#"><img src="./assets/facebook.png" alt=""></a></li>
             <li><a href="#"><img src="./assets/pinterest-circular-logo-symbol.png" alt=""></a></li>
