--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <footer>
     <div class="about">
         <p class="head">About us</p>
-        <p class="sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+        <p class="sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br> sed do eiusmod tempor incididunt ut labore et dolore magna <br>aliqua. Ut enim ad minim veniam, quis nostrud</p>
     </div>
     <div class="contact">
         <p class="head">Contact info</p>
