--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
     </div>
     <div class="contact">
         <p class="head">Contact info</p>
-        <p class="sub">123 street, Lagos. <br> name@example.com <br> +1 234 5678</p>
+        <p class="sub">
+            <ul>
+                
+            </ul>
+        </p>
     </div>
     <div class="social">
         <p class="head">Follow Us</p>
