--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <p class="head">Contact info</p>
         <p class="sub">
             <ul>
-                <li></li>
+                <li>123 street, Lagos.</li>
             </ul>
         </p>
     </div>
