--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <p class="sub">
             <ul>
                 <li>123 street, Lagos.</li>
+                <li>name@example.com</li>
             </ul>
         </p>
     </div>
