--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
     <div class="contact">
         <p class="head">Contact info</p>
-        <p class="sub">
+        <div class="sub">
             <ul>
                 <li>123 street, Lagos.</li>
                 <li>name@example.com</li>
