--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <li>name@example.com</li>
                 <li>+1 234 5678</li>
             </ul>
-        </p>
+        </div>
     </div>
     <div class="social">
         <p class="head">Follow Us</p>
