--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 <footer>
     <div class="about">
         <p class="head">About us</p>
-        <div class="sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br> sed do eiusmod tempor incididunt ut labore et dolore magna <br>aliqua. Ut enim ad minim veniam, quis nostrud</p>
+        <div class="sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            <br> sed do eiusmod tempor incididunt ut labore et dolore magna <br>aliqua. Ut enim ad minim veniam, quis nostrud
+        </div>
     </div>
     <div class="contact">
         <p class="head">Contact info</p>
