--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
 <footer>
     <div class="about">
         <p class="head">About us</p>
-        <div class="sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        <div class="sub">
+            <ul>
+                
+            </ul> 
             <br> sed do eiusmod tempor incididunt ut labore et dolore magna <br>aliqua. Ut enim ad minim veniam, quis nostrud
         </div>
     </div>
