--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <p class="head">About us</p>
         <div class="sub">
             <ul>
-                
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</li>
             </ul> 
             <br> sed do eiusmod tempor incididunt ut labore et dolore magna <br>aliqua. Ut enim ad minim veniam, quis nostrud
         </div>
