--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
         <div class="sub">
             <ul>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</li>
+                <li>sed do eiusmod tempor incididunt ut labore et dolore magna </li>
             </ul> 
-            <br> sed do eiusmod tempor incididunt ut labore et dolore magna <br>aliqua. Ut enim ad minim veniam, quis nostrud
+            <br> <br>aliqua. Ut enim ad minim veniam, quis nostrud
         </div>
     </div>
     <div class="contact">
