--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
             <ul>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</li>
                 <li>sed do eiusmod tempor incididunt ut labore et dolore magna </li>
+                <li>Ut enim ad minim veniam, quis nostrud</li>
             </ul> 
-            <br> <br>aliqua. Ut enim ad minim veniam, quis nostrud
+            <br> <br>aliqua. 
         </div>
     </div>
     <div class="contact">
