--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
         <div class="sub">
             <ul>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</li>
-                <li>sed do eiusmod tempor incididunt ut labore et dolore magna </li>
+                <li>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
                 <li>Ut enim ad minim veniam, quis nostrud</li>
             </ul> 
-            <br> <br>aliqua. 
+            <br> <br>. 
         </div>
     </div>
     <div class="contact">
